Feature: Multi-currency support (#5)
* change: new version config.yml

* refactor: yaml provider

* refactor: sqlite provider

* refactor: command supports multiple currencies.

* feat(config): upgrade config and data format to version 3

- Update config.yml to version 3
- Add support for multiple currencies
- Upgrade SQLite database to new format
- Update YAML data to new structure
- Add upgrade confirmation and migration process

* refactor: remove unused language files, update README.